--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "./node_modules/.bin/webpack -d"
+    "webpack": "webpack",
+    "start": "node ./src/server/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/ettchan/react-prototype#readme",
   "dependencies": {
+    "express": "^4.16.2",
+    "less": "^3.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -26,7 +29,11 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.1.0",
+    "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "less-loader": "^4.0.6",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.0.0",
     "webpack-cli": "^2.0.10"
   }
 }
