--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/ettchan/react-prototype#readme",
   "dependencies": {
+    "bootstrap": "^3.0.0",
     "express": "^4.16.2",
+    "jquery": "^3.3.1",
     "less": "^3.0.1",
+    "popper.js": "^1.12.9",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
@@ -31,8 +35,10 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.11",
     "less-loader": "^4.0.6",
     "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.0.0",
     "webpack-cli": "^2.0.10"
   }
